labs-k8s/webapp-tls/routed-tls-webapp.yaml
# https://www.haproxy.com/blog/enable-tls-with-lets-encrypt-and-the-haproxy-kubernetes-ingress-controller/
# https://www.haproxy.com/documentation/hapee/1-5r2/installation/kubernetes-ingress-controller/
# https://kubernetes.io/es/docs/concepts/configuration/secret/
# https://kubernetes.io/docs/tasks/administer-cluster/encrypt-data/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-tls
  namespace: webapp-tls
  labels:
    app: webapp-tls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-tls
  template:
    metadata:
      labels:
        app: webapp-tls
    spec:
      containers:
      - name: webapp-tls
        image: quay.io/rhte_2019/webapp:v1
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80 
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
    name: webapp-tls-service
    namespace: webapp-tls
spec:
    selector:
      app: webapp-tls
    ports:
    - name: http
      protocol: TCP
      port: 443
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-tls-ingress
  namespace: webapp-tls
  labels:
    app: webapp-tls
  annotations:
      haproxy.org/path-rewrite: "/"
spec:
  rules:
  - host: foo-tls.bar
    http:
      paths:
      - path: /webapp-tls
        pathType: "Prefix"
        backend:
          service:
            name: webapp-tls-service
            port: 
              number: 443
  tls:
  - secretName: foo-tls-secret
    hosts:
    - foo-tls.bar
